...
      />
      <Tabs.Screen
        name="explore"
        options={{
          title: 'Journal',
          tabBarLabel: 'Journal',
          tabBarButtonTestID: 'tab-journal',
          tabBarIcon: ({ color }) => (
            <Image
              source={require('@/assets/images/tabIcons/explore.png')}
              style={[styles.icon, { tintColor: color }]}
            />
          ),
...
      />
      <Tabs.Screen
        name="insights"
        options={{
          title: 'Insights',
          tabBarLabel: 'Insights',
          tabBarButtonTestID: 'tab-insights',
          tabBarIcon: ({ color }) => (
            <Image
              source={require('@/assets/images/tabIcons/insights.png')}
              style={[styles.icon, { tintColor: color }]}
            />
          ),
...
